[gd_scene load_steps=3 format=3 uid="uid://b1kspj2ggpq5x"]

[ext_resource type="Script" path="res://line_connection.gd" id="1_2awvc"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yxkjs"]
resource_local_to_scene = true

[node name="LineConnection" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_2awvc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_yxkjs")

[node name="Line2D" type="Line2D" parent="."]
width = 5.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
